Finalizado crud de livros

--- a/src/app/modules/book/book.component.html
+++ b/src/app/modules/book/book.component.html
@@ -7,3 +7,7 @@
     <h5 mat-line>Pages: {{ b.pages }}</h5>
   </a>
 </mat-nav-list>
+
+<mat-divider></mat-divider>
+<router-outlet></router-outlet>
+<mat-divider></mat-divider>
