Finalizando aplicação com o módulo electronics e lazing load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <div fxLayoutGap="20px">
     <a mat-raised-button routerLink="dvds" routerLinkActive="mat-accent">DVDs</a>
     <a mat-raised-button routerLink="books" routerLinkActive="mat-accent">Books</a>
+    <a mat-raised-button routerLink="electronics" routerLinkActive="mat-accent">Electronics</a>
   </div>
 </mat-toolbar>
 
